--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,24 +4,32 @@ description: Weather App
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=3.1.5 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-
-  cupertino_icons: ^1.0.3
-  flutter_bloc: ^7.0.1
-  equatable: ^2.0.2
-  http: ^0.13.3
+  connectivity_plus: ^5.0.2
+  dio: ^5.4.0
+  flutter_bloc: ^8.1.3
+  fl_location: ^3.0.0
+  location_picker_flutter_map: ^3.0.0
+  json_annotation: ^4.8.1
+  http: ^1.2.0
+  location_plus: ^1.0.6
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.4.8
+  flutter_lints: ^3.0.1
+  import_sorter: ^4.6.0
+  json_serializable: ^6.7.1
 flutter:
   uses-material-design: true
-
+  assets:
+    - assets/configs/config.json
   fonts:
     - family: Roboto
       fonts:
