--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,10 +9,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  bloc_test: ^9.1.5
   connectivity_plus: ^5.0.2
   dio: ^5.4.0
   flutter_bloc: ^8.1.3
-  fl_location: ^3.0.0
+  geocoding: ^2.1.1
+  geolocator: ^10.1.0
+  google_fonts: ^6.1.0
   location_picker_flutter_map: ^3.0.0
   json_annotation: ^4.8.1
   http: ^1.2.0
@@ -30,7 +33,4 @@ flutter:
   uses-material-design: true
   assets:
     - assets/configs/config.json
-  fonts:
-    - family: Roboto
-      fonts:
-        - asset: assets/fonts/Roboto-Regular.ttf
+
